// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login renders showing errors 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "flex-start",
      "paddingBottom": 20,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "paddingHorizontal": 20,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <Image
      onLoadEnd={[Function]}
      resizeMode="stretch"
      source={1}
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <BlurView
      blurAmount={10}
      blurType="dark"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
      viewRef={null}
    />
    <Text
      style={
        Object {
          "color": "#C21E5D",
          "fontSize": 13,
          "fontWeight": "400",
          "marginTop": 8,
        }
      }
    >
      Oops! Invalid email or password
    </Text>
    <Text
      style={
        Object {
          "color": "#FFF",
          "fontSize": 23,
          "fontWeight": "600",
          "marginBottom": 8,
          "marginTop": 16,
          "textAlign": "left",
        }
      }
    >
      Making Sense RN seed
    </Text>
    <Text
      style={
        Object {
          "color": "#FFF",
          "fontSize": 17,
          "fontWeight": "400",
          "letterSpacing": 0.2,
          "marginBottom": 30,
        }
      }
    >
      Please login to your account
    </Text>
    <View
      style={
        Object {
          "marginBottom": 32,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFF",
            "fontSize": 13,
            "fontWeight": "600",
            "marginBottom": 10,
          }
        }
      >
        EMAIL:
      </Text>
      <TextInput
        allowFontScaling={true}
        keyboardType="email-address"
        onChangeText={[Function]}
        placeholder="Enter your email..."
        placeholderTextColor="#D5DEF1"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "borderColor": "#D5DEF1",
              "borderRadius": 4,
              "borderWidth": 1,
              "color": "#FFF",
              "fontSize": 15,
              "fontWeight": "400",
              "padding": 16,
            },
            Object {
              "borderColor": "#C21E5D",
              "borderWidth": 1,
            },
          ]
        }
        underlineColorAndroid="rgba(0, 0, 0, 0)"
        value="dgeslin@makingsense.com"
      />
    </View>
    <View
      style={
        Object {
          "marginBottom": 32,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFF",
            "fontSize": 13,
            "fontWeight": "600",
            "marginBottom": 10,
          }
        }
      >
        PASSWORD:
      </Text>
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        placeholder="Enter your password..."
        placeholderTextColor="#D5DEF1"
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Array [
            Object {
              "borderColor": "#D5DEF1",
              "borderRadius": 4,
              "borderWidth": 1,
              "color": "#FFF",
              "fontSize": 15,
              "fontWeight": "400",
              "padding": 16,
            },
            Object {
              "borderColor": "#C21E5D",
              "borderWidth": 1,
            },
          ]
        }
        underlineColorAndroid="rgba(0, 0, 0, 0)"
        value="password"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "flex-end",
        "paddingHorizontal": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFF",
          "marginBottom": 20,
        }
      }
    >
      This screen uses 
      <Text
        style={
          Object {
            "color": "yellow",
          }
        }
      >
        @react-native-community/blur 
      </Text>
      (a native module) to display a blurred background
    </Text>
    <View
      style={
        Object {
          "borderRadius": 3,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="login-button"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#2089dc",
              "borderColor": "#2089dc",
              "borderRadius": 3,
              "borderWidth": 0,
              "flexDirection": "row",
              "justifyContent": "center",
              "padding": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 18,
                "paddingBottom": 1,
                "paddingTop": 2,
                "textAlign": "center",
              }
            }
          >
            Login
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Login renders without crashing 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "flex-start",
      "paddingBottom": 20,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "paddingHorizontal": 20,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <Image
      onLoadEnd={[Function]}
      resizeMode="stretch"
      source={1}
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <BlurView
      blurAmount={10}
      blurType="dark"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
      viewRef={null}
    />
    <Text
      style={
        Object {
          "color": "#FFF",
          "fontSize": 23,
          "fontWeight": "600",
          "marginBottom": 8,
          "marginTop": 16,
          "textAlign": "left",
        }
      }
    >
      Making Sense RN seed
    </Text>
    <Text
      style={
        Object {
          "color": "#FFF",
          "fontSize": 17,
          "fontWeight": "400",
          "letterSpacing": 0.2,
          "marginBottom": 30,
        }
      }
    >
      Please login to your account
    </Text>
    <View
      style={
        Object {
          "marginBottom": 32,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFF",
            "fontSize": 13,
            "fontWeight": "600",
            "marginBottom": 10,
          }
        }
      >
        EMAIL:
      </Text>
      <TextInput
        allowFontScaling={true}
        keyboardType="email-address"
        onChangeText={[Function]}
        placeholder="Enter your email..."
        placeholderTextColor="#D5DEF1"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "borderColor": "#D5DEF1",
              "borderRadius": 4,
              "borderWidth": 1,
              "color": "#FFF",
              "fontSize": 15,
              "fontWeight": "400",
              "padding": 16,
            },
            false,
          ]
        }
        underlineColorAndroid="rgba(0, 0, 0, 0)"
        value="dgeslin@makingsense.com"
      />
    </View>
    <View
      style={
        Object {
          "marginBottom": 32,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFF",
            "fontSize": 13,
            "fontWeight": "600",
            "marginBottom": 10,
          }
        }
      >
        PASSWORD:
      </Text>
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        placeholder="Enter your password..."
        placeholderTextColor="#D5DEF1"
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Array [
            Object {
              "borderColor": "#D5DEF1",
              "borderRadius": 4,
              "borderWidth": 1,
              "color": "#FFF",
              "fontSize": 15,
              "fontWeight": "400",
              "padding": 16,
            },
            false,
          ]
        }
        underlineColorAndroid="rgba(0, 0, 0, 0)"
        value="password"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "flex-end",
        "paddingHorizontal": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFF",
          "marginBottom": 20,
        }
      }
    >
      This screen uses 
      <Text
        style={
          Object {
            "color": "yellow",
          }
        }
      >
        @react-native-community/blur 
      </Text>
      (a native module) to display a blurred background
    </Text>
    <View
      style={
        Object {
          "borderRadius": 3,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="login-button"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#2089dc",
              "borderColor": "#2089dc",
              "borderRadius": 3,
              "borderWidth": 0,
              "flexDirection": "row",
              "justifyContent": "center",
              "padding": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 18,
                "paddingBottom": 1,
                "paddingTop": 2,
                "textAlign": "center",
              }
            }
          >
            Login
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Login renders without crashing on Android 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "flex-start",
      "paddingBottom": 20,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "paddingHorizontal": 20,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <Image
      onLoadEnd={[Function]}
      resizeMode="stretch"
      source={1}
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <BlurView
      blurAmount={10}
      blurType="dark"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
      viewRef={null}
    />
    <Text
      style={
        Object {
          "color": "#FFF",
          "fontSize": 23,
          "fontWeight": "600",
          "marginBottom": 8,
          "marginTop": 16,
          "textAlign": "left",
        }
      }
    >
      Making Sense RN seed
    </Text>
    <Text
      style={
        Object {
          "color": "#FFF",
          "fontSize": 17,
          "fontWeight": "400",
          "letterSpacing": 0.2,
          "marginBottom": 30,
        }
      }
    >
      Please login to your account
    </Text>
    <View
      style={
        Object {
          "marginBottom": 32,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFF",
            "fontSize": 13,
            "fontWeight": "600",
            "marginBottom": 10,
          }
        }
      >
        EMAIL:
      </Text>
      <TextInput
        allowFontScaling={true}
        keyboardType="email-address"
        onChangeText={[Function]}
        placeholder="Enter your email..."
        placeholderTextColor="#D5DEF1"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "borderColor": "#D5DEF1",
              "borderRadius": 4,
              "borderWidth": 1,
              "color": "#FFF",
              "fontSize": 15,
              "fontWeight": "400",
              "padding": 16,
            },
            false,
          ]
        }
        underlineColorAndroid="rgba(0, 0, 0, 0)"
        value="dgeslin@makingsense.com"
      />
    </View>
    <View
      style={
        Object {
          "marginBottom": 32,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFF",
            "fontSize": 13,
            "fontWeight": "600",
            "marginBottom": 10,
          }
        }
      >
        PASSWORD:
      </Text>
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        placeholder="Enter your password..."
        placeholderTextColor="#D5DEF1"
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Array [
            Object {
              "borderColor": "#D5DEF1",
              "borderRadius": 4,
              "borderWidth": 1,
              "color": "#FFF",
              "fontSize": 15,
              "fontWeight": "400",
              "padding": 16,
            },
            false,
          ]
        }
        underlineColorAndroid="rgba(0, 0, 0, 0)"
        value="password"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "flex-end",
        "paddingHorizontal": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFF",
          "marginBottom": 20,
        }
      }
    >
      This screen uses 
      <Text
        style={
          Object {
            "color": "yellow",
          }
        }
      >
        @react-native-community/blur 
      </Text>
      (a native module) to display a blurred background
    </Text>
    <View
      style={
        Object {
          "borderRadius": 3,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="login-button"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#2089dc",
              "borderColor": "#2089dc",
              "borderRadius": 3,
              "borderWidth": 0,
              "flexDirection": "row",
              "justifyContent": "center",
              "padding": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 18,
                "paddingBottom": 1,
                "paddingTop": 2,
                "textAlign": "center",
              }
            }
          >
            Login
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
